--- a/noway.html
+++ b/noway.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Pong</title>
 		<script src="../build/three.min.js"></script>
-		<script src="js/controls/OrbitControls.js"></script>
+		<script src="js/OrbitControls.js"></script>
 		<script src="js/Detector.js"></script>
 		<script src="js/libs/stats.min.js"></script>
 		<script src="js/helpers/CameraHelper.js"></script>
@@ -70,7 +70,7 @@
 		<div id="container"></div>
 
 		<div id="info">
-			A (very) simple pong game built with Three.js R78
+			A (very) simple pong game built with Three.js 
 			<br><br>
 			Use Q key to move up
 			<br> 
