--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
     <div id="info"></div>
     
-    <script src="pong_game"></script>
+    <script src="pong_game.js"></script>
     
   </body>
 
