--- a/index.html
+++ b/index.html
@@ -1,53 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
-  <head>
-    <title>Pong Game</title>
-  </head>
-
-  <body>
-    <h3 id="scoreBoard"></h3>
-    <div id="container"></div>
-    <script src="three.min.js"></script>
-    <script src="PointerLockControls.js"></script>
-  
-    <div id="info"></div>
-    
-    <script src="new.js"></script>
-    
-  </body>
-
-  <style>
-
-    #scoreBoard{
-      color:black;
-      display: inline-block;
-      text-align: center;
-      vertical-align: center;
-      position: absolute;
-      margin-top: 20%;
-      margin-bottom: 60%;
-      margin-left: 40%;
-      margin-right: 35%;
-      color: grey;
-      font-size: 200%;
-      font-weight: bold;
-    }
-      body{
-          width: 100%;
-          height: 100%;
-          overflow-x: hidden;
-          overflow-y: hidden;
-          margin: 0;
-          padding: 0;
-      }
-      #info {
-        position: absolute;
-        top: 10px;
-        width: 100%;
-        text-align: center;
-        z-index: 100;
-        display:block;
-      }
-  </style>
+	<head>
+		<title>EXTRAS_PONG GyV3D 2017-2018</title>
+		<style>
+			body {
+				background-color: black;
+			}
+			#gameCanvas {
+				background-color: black;
+				width: 640px;
+				height: 360px;
+				margin: auto;
+				align: center;
+			}
+			#scoreboard {
+				text-align: center;
+				font-family: Segoe UI, Helvetica, Ubuntu, sans-serif;
+				color: white;
+			}
+			#scores {
+				font-size:600%;
+				padding:0;
+				margin:0;
+				color: white;
+			}
+			#title {
+				background-color: white;
+				color: black;
+			}
+		</style>
+	</head>
+	<body onload='setup();'>
+		<div id='gameCanvas'></div>
+		<script src='js/three.js'></script>
+		<script src='js/keyboard.js'></script>
+		<script src='js/pong.js'></script>
+		<div id='scoreboard'>
+			<h1 id='scores'>0-0</h1>
+			<h1 id='title'>GyV3D PONG</h1>
+			<h2 id='winnerBoard'>First to 3 wins!</h2>
+			<h3>A - move left
+			<br>D - move right<br>
+			<br>If you want party after the game, turn up the volume down here!</h3>
+			<audio controls id="end" muted>
+	  		<source src="./js/sounds/Sleep.mp3" type="audio/mpeg">
+					Your browser does not support the audio element.
+			</audio>
+		</div>
+	</body>
 </html>
