--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</head>
 	<body onload='setup();'>
 		<div id='gameCanvas'></div>
-		<script src='js/three.js'></script>
+		<script src='js/three.min.js'></script>
 		<script src='js/keyboard.js'></script>
 		<script src='js/pong.js'></script>
 		<div id='scoreboard'>
