--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>My little web page</title>
+        <title>Pong Game</title>
         <style type="text/css">
          html {
            font-family: Arial;
