--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
   <head>
-		<title>Game</title>
+		<title>Pong Game Project</title>
 		<style>
 			body {
 				background-color: black;
@@ -37,7 +37,7 @@
 		<script src='./js/game.js'></script>
 		<div id='scoreboard'>
 			<h1 id='scores'>0-0</h1>
-			<h1 id='title'>3D PONG</h1>
+			<h1 id='title'>3D PONG FINAL PROJECT</h1>
 			<h2 id='winnerBoard'>First to 7 wins!</h2>
 			<h3>A - move left
 			<br>D - move right</h3>
